# madobe

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .mise.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  justfile  lychee.toml  taplo.toml  typos.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  merge-queue.yml  nightly.yml
.qd/: agents.md  config.toml
apple/: .swiftformat  .swiftlint.yml  Project.swift
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/hostd/: Cargo.toml
apps/hostd/src/: lib.rs  main.rs
apps/hostd/tests/: display_bind.rs
crates/capture/: Cargo.toml
crates/compositor/: Cargo.toml
crates/encode/: Cargo.toml
crates/encode-nv-sys/: Cargo.toml
crates/hyprland/: Cargo.toml
crates/protocol/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  sha256.rs
crates/transport/src/product_quic_smoke/: artifacts.rs  cli.rs  error.rs  mod.rs
crates/transport/src/video_smoke/: artifacts.rs  cli.rs  mod.rs  sha256.rs  wire.rs
crates/transport/tests/: lan_video_smoke.rs  loopback.rs  product_quic_smoke.rs
docs/: CROSS_DEVICE_VALIDATION.md  DIRECT_CAPTURE_HELPER_PREFLIGHT.md  ENGINEERING.md  LAN_VIDEO_SMOKE_HARNESS.md  LINUX_ORCHESTRATOR.md  LINUX_VIDEO_SMOKE_HOST_PREFLIGHT.md  MACOS_ORCHESTRATOR.md  ORCHESTRATION.md  PRD.md  QD_WORKFLOW.md
docs/protocol/: encoded-video-frame.md
evidence/m0-ci-green/: notes.md
evidence/m0-mac-bootstrap-verify/: core-simulator-warning.txt  mac-env.txt  notes.md
evidence/m0-qd-orchestration-smoke/: notes.md
evidence/m1-audit/: cli-hello-after-boundary-cleanup.out  cli-status-after-boundary-cleanup.out  notes.md  qd-status.json
evidence/m1-compositor-contract/: notes.md
evidence/m1-hostd-control-cli/: notes.md
evidence/m1-hyprland-command-layer/: notes.md
evidence/m1-hyprland-fixtures/: host-env.txt  notes.md
evidence/m1-linux-hardware-validation/: cargo-version.out  cli-create.out  cli-park.out  cli-remove.out  cli-status-after-adopt.out  cli-status-after-park.out  cli-status-final.out  final-cleanup.out  host-env.txt  hyprland-monitors-after-adopt.json  hyprland-monitors-after-park.json  notes.md  (+3 more)
nix/: direct-capture-preflight.sh  flake.nix
roadmap/: qd-export.json
scripts/: cross-device-result-check.sh  dependabot-contract-check.sh  pin-hygiene-check.sh  pr-template-check.sh  product-quic-result-check.sh  qd-export-parity-check.sh  qd-ready-queue-check.sh  qd-reports-check.sh  result-check-common.sh  workflow-contract-check.sh
supply-chain/: config.toml
(+626 files in other folders)
