[workspace]
members = [
  "apps/cli",
  "apps/hostd",
  "crates/capture",
  "crates/compositor",
  "crates/encode",
  "crates/encode-nv-sys",
  "crates/hyprland",
  "crates/protocol",
  "crates/telemetry",
  "crates/transport",
]
resolver = "3"

[workspace.package]
authors = ["cat-cave contributors"]
description = "madobe remote desktop workspace"
edition = "2024"
homepage = "https://github.com/cat-cave/madobe"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cat-cave/madobe"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
madobe-compositor = { path = "crates/compositor", version = "0.1.0" }
madobe-capture = { path = "crates/capture", version = "0.1.0" }
madobe-hyprland = { path = "crates/hyprland", version = "0.1.0" }
madobe-encode = { path = "crates/encode", version = "0.1.0" }
madobe-encode-nv-sys = { path = "crates/encode-nv-sys", version = "0.1.0" }
madobe-protocol = { path = "crates/protocol", version = "0.1.0" }
madobe-telemetry = { path = "crates/telemetry", version = "0.1.0" }
madobe-transport = { path = "crates/transport", version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
nursery = "deny"
pedantic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
