[package]
name = "madobectl"
description = "madobe command-line control utility"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hostd = { path = "../hostd", version = "0.1.0" }
madobe-compositor.workspace = true
madobe-hyprland.workspace = true
madobe-protocol.workspace = true
madobe-telemetry.workspace = true

[lints]
workspace = true
