[package]
name = "hostd"
description = "madobe host daemon bootstrap binary"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
madobe-compositor.workspace = true
madobe-protocol.workspace = true
madobe-telemetry.workspace = true

[lints]
workspace = true
